--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,59 +2,60 @@
   <div class="container footer">
     <div class="footer__wrapper">
       <div class="footer__block--title">
-        <p class="footer__title">homemade ice cream made</p>
-        <p class="footer__title--accent">with passion</p>
+        <p class="footer__title">HOMEMADE ICE CREAM MADE</p>
+        <p class="footer__title--accent">WITH PASSION</p>
       </div>
-      <div class="social-media">
-        <ul class="social-media__block">
-          <li>
-            <a
-              href="https://github.com/"
-              aria-label="Find us on GitHub"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              class="social-media__item"
-            >
-              <svg class="social-media__icon" width="20px" height="20px">
-                <use href="./images/social_media_icon.svg#icon-github-project"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://telegram.org/"
-              aria-label="Find us on Telegram"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              class="social-media__item"
-            >
-              <svg class="social-media__icon" width="20.4px" height="15.87px">
-                <use href="./images/social_media_icon.svg#icon-telegram"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com/"
-              aria-label="Find us on Facebook"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              class="social-media__item"
-            >
-              <svg class="social-media__icon" width="9.35px" height="20.4px">
-                <use href="./images/social_media_icon.svg#icon-facebook-project"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <div class="social-wrapper">
+        <div class="social-media">
+          <ul class="social-media__block">
+            <li>
+              <a
+                href="https://github.com/"
+                aria-label="Find us on GitHub"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                class="social-media__item"
+              >
+                <svg class="social-media__icon" width="20px" height="20px">
+                  <use href="./images/social_media_icon.svg#icon-github-project"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://telegram.org/"
+                aria-label="Find us on Telegram"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                class="social-media__item"
+              >
+                <svg class="social-media__icon" width="20.4px" height="15.87px">
+                  <use href="./images/social_media_icon.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/"
+                aria-label="Find us on Facebook"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                class="social-media__item"
+              >
+                <svg class="social-media__icon" width="9.35px" height="20.4px">
+                  <use href="./images/social_media_icon.svg#icon-facebook-project"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="contact">
-        <p class="contact__paragraph">Feel free to contact</p>
-        <a class="contact__phone" href="tel:+610383766284"> +61 (0) 383 766 284</a>
+        <div class="contact">
+          <p class="contact__paragraph">Feel free to contact</p>
+          <a class="contact__phone" href="tel:+610383766284"> +61 (0) 383 766 284</a>
+        </div>
       </div>
     </div>
-
     <div class="copyrights">
       <p class="copyrights__paragraph">&#169; 2022 - IceCream.</p>
       <p class="copyrights__paragraph">All Rights Reserved.</p>
