--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -1,4 +1,4 @@
-.swiper {
+.slider {
     max-width: 480px;
     display: flex;
     justify-content: center;
@@ -7,37 +7,43 @@
     margin: 0 auto;
     height: 1037px;
     background-image: url(../../images/customer-reviews/BackgroudMobile1x.jpg.jpg);
-
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-        background-image: url(../../images/customer-reviews/BackgroudMobile2x.jpg.jpg);
-    }
-
-    @include tablet {
-        max-width: 768px;
-        background-repeat: no-repeat;
-        background-image: url(../../images/customer-reviews/BackgroundTablet1x.jpg\ \(2\).jpg);
-
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+    
+    
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url(../../images/customer-reviews/BackgroundTablet2x.jpg\ \(2\).jpg);
+            background-image: url(../../images/customer-reviews/BackgroudMobile2x.jpg.jpg);
         }
-    }
-
-    @include desktop {
-        max-width: 1200px;
-        background-repeat: no-repeat;
-        padding: 200px 0;
-        background-image: url(../../images/customer-reviews/BackgroudDesktop1x.jpg.jpg);
-
-        @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            background-image: url(../../images/customer-reviews/BackgroudDesktop2x.jpg.jpg);
+    
+        @include tablet {
+            max-width: 768px;
+            background-repeat: no-repeat;
+            background-image: url(../../images/customer-reviews/BackgroundTablet1x.jpg\ \(2\).jpg);
+    
+            @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../../images/customer-reviews/BackgroundTablet2x.jpg\ \(2\).jpg);
+            }
         }
-    }
+    
+        @include desktop {
+            max-width: 1600px;
+            background-repeat: no-repeat;
+            padding: 200px 0;
+            background-image: url(../../images/customer-reviews/BackgroudDesktop1x.jpg.jpg);
+    
+            @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../../images/customer-reviews/BackgroudDesktop2x.jpg.jpg);
+            }
+        }
+    
 
     &__slide {
         width: 1000px;
@@ -80,14 +86,12 @@
     }
 
     &__gallery {
-        width: 280px;
-        height: 130px;
         margin-top: -30px;
         margin-bottom: 80px;
         justify-content: center;
         display: flex;
         align-items: center;
     }
-
-
 }
+
+
