--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-        <div class="swiper" >
-            <img class="swiper__gallery" src="../images/customer-reviews/lodyDesktop1x.jpg.jpg">
-
-            <img class="swiper__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
-            <p class="swiper__text">
+        <section class="section slider" >
+            <img class="slider__gallery" src="../images/customer-reviews/lodyMobile1x.jpg.jpg">
+            <div>
+            <img class="sliderr__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
+            <p class="slider__text">
                 I love visiting your cafe. You prepare the most delicious ice
                 cream in Los Angeles! In addition, you have beautiful serving,
                 cozy atmosphere and polite staff.
             </p>
-            <h2 class="swiper__heading">Emily, Los Angeles</h2>
-        </div>
+            <h2 class="slider__heading">Emily, Los Angeles</h2>
+            </div>
+        </section>
        
