--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,7 +2,7 @@
         <section class="section slider" >
             <img class="slider__gallery" src="../images/customer-reviews/lodyMobile1x.jpg.jpg">
             <div>
-            <img class="sliderr__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
+            <img class="slider__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
             <p class="slider__text">
                 I love visiting your cafe. You prepare the most delicious ice
                 cream in Los Angeles! In addition, you have beautiful serving,
