--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
         <section class="section slider" >
-            <img class="slider__gallery" src="../images/customer-reviews/lodyMobile1x.jpg.jpg">
+            <img class="slider__gallery" src="/src/images/customer-reviews/lodyMobile1x.jpg.jpg">
             <div>
-            <img class="slider__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
+            <img class="slider__image" src="/src/images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
             <p class="slider__text">
                 I love visiting your cafe. You prepare the most delicious ice
                 cream in Los Angeles! In addition, you have beautiful serving,
@@ -12,3 +12,4 @@
             </div>
         </section>
        
+
