--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -6,7 +6,7 @@
       <p class="about__label">TRADITION AND LOVE</p>
       <h2 class="about__title">HOW IT'S MADE?</h2>
     </article>
-    <figure class="cow-box">
+    <figure class="cow">
       <img
         src="/src/images/mobile/cow.jpg"
         alt="cow on grass"
@@ -21,58 +21,73 @@
         sizes="(min-width:480px) 480px,(min-width:768px) 768px,(min-width:1200px) 1200px"
         class="cow__img"
       />
-      <figcaption class="cow__box-text">
-        <p class="cow__text">
-          Ice is a place where you will become not only a little happier, but also healthier. Health
-          is the main value for us, and we follow it when creating our handmade desserts.
-        </p>
-        <p class="cow__text">
-          We use traditional recipes and 100% natural ingredients. Our products are so natural that
-          they can be given to children from the age of three years. Sweets lovers can expect 55
-          types of ice cream, 15 types of coffee and 23 milkshakes.
-        </p>
-        <p class="cow__text">This is enough to choose ice cream and coffee for any mood!</p>
+      <figcaption>
+        <ul class="cow__box-list">
+          <li class="cow__box-list-item">
+            <p class="cow__text-list">
+              Ice is a place where you will become not only a little happier, but also healthier.
+              Health is the main value for us, and we follow it when creating our handmade desserts.
+            </p>
+          </li>
+          <li class="cow__box-list-item">
+            <p class="cow__text-list">
+              We use traditional recipes and 100% natural ingredients. Our products are so natural
+              that they can be given to children from the age of three years. Sweets lovers can
+              expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.
+            </p>
+          </li>
+          <li class="cow__box-list-last-item">
+            <p class="cow__text-list">
+              This is enough to choose ice cream and coffee for any mood!
+            </p>
+          </li>
+        </ul>
+        <div class="about__button">
+          <button class="about__button-body" type="button">Read more ></button>
+        </div>
       </figcaption>
     </figure>
-    <div class="about__button">
-      <button class="about__button-body" type="button" data-modal-open>Read more ></button>
-    </div>
   </div>
 </section>
 <section class="advantages">
   <h6 class="crawler">advantages</h6>
-  <figure class="advantages__icon-box">
-    <svg class="advantages__icon">
-      <use href="/src/images/how_made_icon.svg#icon-cow-head"></use>
-    </svg>
-    <figcaption class="advantages__icon-text-box">
-      <h3 class="advantages__icon-title">721</h3>
-      <p class="advantages__icon-text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </figcaption>
-  </figure>
-  <figure class="advantages__icon-box">
-    <svg class="advantages__icon">
-      <use class="advantages__icon-body" href="/src/images/how_made_icon.svg#icon-ketel"></use>
-    </svg>
-    <figcaption class="advantages__icon-text-box">
-      <h3 class="advantages__icon-title">16KG</h3>
-      <p class="advantages__icon-text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </figcaption>
-  </figure>
-  <figure class="advantages__icon-box">
-    <svg class="advantages__icon">
-      <use class="advantages__icon-body" href="/src/images/how_made_icon.svg#icon-ice-cream"></use>
-    </svg>
-    <figcaption class="advantages__icon-text-box">
-      <h3 class="advantages__icon-title">84</h3>
-      <p class="advantages__icon-text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </figcaption>
-  </figure>
+  <div class="wrapper-icon">
+    <figure class="advantages__icon-box">
+      <svg class="advantages__icon">
+        <use href="/src/images/how_made_icon.svg#icon-cow-head"></use>
+      </svg>
+      <figcaption class="advantages__icon-text-box">
+        <h3 class="advantages__icon-title">721</h3>
+        <p class="advantages__icon-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </figcaption>
+    </figure>
+    <figure class="advantages__icon-box">
+      <svg class="advantages__icon">
+        <use class="advantages__icon-body" href="/src/images/how_made_icon.svg#icon-ketel"></use>
+      </svg>
+      <figcaption class="advantages__icon-text-box">
+        <h3 class="advantages__icon-title">16KG</h3>
+        <p class="advantages__icon-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </figcaption>
+    </figure>
+    <figure class="advantages__icon-box">
+      <svg class="advantages__icon">
+        <use
+          class="advantages__icon-body"
+          href="/src/images/how_made_icon.svg#icon-ice-cream"
+        ></use>
+      </svg>
+      <figcaption class="advantages__icon-text-box">
+        <h3 class="advantages__icon-title">84</h3>
+        <p class="advantages__icon-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </figcaption>
+    </figure>
+  </div>
 </section>
 <!--Krowa ^^-->
