--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,78 +1,106 @@
 <!DOCTYPE html>
 <section class="hero" id="top">
-    <div class="hero__container">
-        <div class="hero__content-wrap">
-            <div class="hero__main-content">
-                <div class="hero__title-content">
-                    <h1 class="hero__title title title--light">
-                        Ice cream made with passion
-                    </h1>
-                    <ul class="hero__main-list">
-                        <li class="hero__main-item"><a class="hero__main-link" href="#Products">Products</a></li>
-                        <li class="hero__main-item"><a class="hero__main-link" href="#Made">How it`s made?</a></li>
-                    </ul>
-                    <!-- <div class="hero__buttons">
+  <div class="hero__container">
+    <div class="hero__content-wrap">
+      <div class="hero__main-content">
+        <div class="hero__title-content">
+          <h1 class="hero__title title title--light">Ice cream made with passion</h1>
+          <ul class="hero__main-list">
+            <li class="hero__main-item">
+              <a class="hero__main-link" href="#Products">Products</a>
+            </li>
+            <li class="hero__main-item">
+              <a class="hero__main-link" href="#Made">How it`s made?</a>
+            </li>
+          </ul>
+          <!-- <div class="hero__buttons">
                         <a class="hero__button btn" href="#products"
                             aria-label="link to product section">Products</a>
                         <a class="hero__button btn btn--color-light" href="#about"
                             aria-label="link to section about making ice-cream">How it’s made?</a>
                     </div> -->
-                </div>
-            </div>
-
-            <div class="hero__amount">
-                <p class="hero__txt">16</p>
-                <p class="hero__txt-caffe">cafes</p>
-                <p class="hero__txt">23</p>
-                <p class="hero__txt-caffe">food trucks</p>
-            </div>
         </div>
+      </div>
 
-        <div class="hero__wrap-plate">
-            <picture>
-                <source srcset="
-              /src/images/desktop/plateDesktop.png    1x,
-              /src/images/desktop/plateDesktop@2x.png 2x
-            " media="(min-width: 1200px)" width="225" />
-                <source srcset="
-                /src//images/tablet/plateTablet.png    1x,
-                /src//images/tablet/plateTablet@2x.png 2x
-            " media="(min-width: 768px)" width="152" />
-                <img class="hero__plate-img" src="/src/images/tablet/x2/plateTablet@2x.png" title="ice-cream" alt="ice-cream" />
-            </picture>
-            <div class="hero__ad">
-                <p class="hero__after-title">
-                    Indulge in a scoop of ice cream made with passion and treat your taste buds to an unforgettable
-                    experience!
-                </p>
-                <button class="hero__link-btn" type="button">
-                    <svg class="hero__icon" width="8" height="8">
-                        <use href="/src/images/icons.svg"></use>
-                    </svg>
-                </button>
-            </div>
-        </div>
-
-        <div class="hero__image">
-            <picture>
-                <source srcset="
-                /src/images/desktop/iceCreamDesktop.png    1x,
-                /src/images/desktop/iceCreamDesktop@2x.png 2x
-            " media="(min-width: 1200px)" width="484" />
-                <source srcset="
-                /src/images/tablet/iceCreamTablet.png    1x,
-                /src/images/tablet/iceCreamTablet@2x.png 2x
-            " media="(min-width: 768px)" width="270" />
-                <source srcset="
-                /src/images/mobile/iceCreamMobile.png    1x,
-                /src/images/mobile/iceCreamMobile@2x.png 2x
-            " media="(min-width: 480px)" width="270" />
-                <source srcset="
-                /src/images/mobile/iceCreamMobile.png    1x,
-                /src/images/mobile/iceCreamMobile@2x.png 2x
-            " media="(max-width: 479px)" width="247" />
-                <img src="/src/images/mobile/x2/iceCreamMobile@2x.png" alt="ice-cream" />
-            </picture>
-        </div>
+      <div class="hero__amount">
+        <p class="hero__txt">16</p>
+        <p class="hero__txt-caffe">cafes</p>
+        <p class="hero__txt">23</p>
+        <p class="hero__txt-caffe">food trucks</p>
+      </div>
     </div>
+
+    <div class="hero__wrap-plate">
+      <picture>
+        <source
+          srcset="
+            /src/images/desktop/plateDesktop.png    1x,
+            /src/images/desktop/plateDesktop@2x.png 2x
+          "
+          media="(min-width: 1200px)"
+          width="225"
+        />
+        <source
+          srcset="/src//images/tablet/plateTablet.png 1x, /src//images/tablet/plateTablet@2x.png 2x"
+          media="(min-width: 768px)"
+          width="152"
+        />
+        <img
+          class="hero__plate-img"
+          src="/src/images/tablet/x2/plateTablet@2x.png"
+          title="ice-cream"
+          alt="ice-cream"
+        />
+      </picture>
+      <div class="hero__ad">
+        <p class="hero__after-title">
+          Indulge in a scoop of ice cream made with passion and treat your taste buds to an
+          unforgettable experience!
+        </p>
+        <button class="hero__link-btn" type="button">
+          <svg class="hero__icon" width="8" height="8">
+            <use href="/src/images/icons.svg"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <div class="hero__image">
+      <picture>
+        <source
+          srcset="
+            /src/images/desktop/iceCreamDesktop.png    1x,
+            /src/images/desktop/iceCreamDesktop@2x.png 2x
+          "
+          media="(min-width: 1200px)"
+          width="484"
+        />
+        <source
+          srcset="
+            /src/images/tablet/iceCreamTablet.png    1x,
+            /src/images/tablet/iceCreamTablet@2x.png 2x
+          "
+          media="(min-width: 768px)"
+          width="270"
+        />
+        <source
+          srcset="
+            /src/images/mobile/iceCreamMobile.png    1x,
+            /src/images/mobile/iceCreamMobile@2x.png 2x
+          "
+          media="(min-width: 480px)"
+          width="270"
+        />
+        <source
+          srcset="
+            /src/images/mobile/iceCreamMobile.png    1x,
+            /src/images/mobile/iceCreamMobile@2x.png 2x
+          "
+          media="(max-width: 479px)"
+          width="247"
+        />
+        <img src="/src/images/mobile/x2/iceCreamMobile@2x.png" alt="ice-cream" />
+      </picture>
+    </div>
+  </div>
 </section>
