--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -24,7 +24,7 @@
         <p class="products__text">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer
         </p>
-        <button class="products__btn-service" type="button" data-modal-open>
+        <button class="products__btn-service" type="button">
           <svg class="" width="40" height="25">
             <use href="./images/icons2.svg#icon-arrow"></use>
           </svg>
@@ -50,7 +50,7 @@
           Fragrant invigorating drink created from 100% natural ingredients without the use of
           preservatives and flavor enhancers
         </p>
-        <button class="products__btn-service" type="button" data-modal-open>
+        <button class="products__btn-service" type="button">
           <svg class="" width="40" height="25">
             <use href="./images/icons2.svg#icon-arrow"></use>
           </svg>
@@ -77,7 +77,7 @@
           Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
           other sweets of your choice
         </p>
-        <button class="products__btn-service" type="button" data-modal-open>
+        <button class="products__btn-service" type="button">
           <svg class="" width="40" height="25">
             <use href="./images/icons2.svg#icon-arrow"></use>
           </svg>
