poprawa wszystkich błędów w repo
advantages header hero modal-about product

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -43,7 +43,7 @@
           </li>
         </ul>
         <div class="about__button">
-          <button class="about__button-body" type="button">Read more ></button>
+          <button class="about__button-body" type="button">Read more &gt</button>
         </div>
       </figcaption>
     </figure>
