--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -35,7 +35,7 @@
       </figcaption>
     </figure>
     <div class="about__button">
-      <button class="about__button-body" type="button">Read more ></button>
+      <button class="about__button-body" type="button">Read more</button>
     </div>
   </div>
 </section>
