--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -34,14 +34,17 @@
       <picture>
         <source
           srcset="
-            /src/images/desktop/plateDesktop.png    1x,
-            /src/images/desktop/plateDesktop@2x.png 2x
+            /src/images/desktop/plateDesktop.png       1x,
+            /src/images/desktop/x2/plateDesktop@2x.png 2x
           "
           media="(min-width: 1200px)"
           width="225"
         />
         <source
-          srcset="/src//images/tablet/plateTablet.png 1x, /src//images/tablet/plateTablet@2x.png 2x"
+          srcset="
+            /src/images/tablet/plateTablet.png       1x,
+            /src/images/tablet/x2/plateTablet@2x.png 2x
+          "
           media="(min-width: 768px)"
           width="152"
         />
@@ -69,32 +72,32 @@
       <picture>
         <source
           srcset="
-            /src/images/desktop/iceCreamDesktop.png    1x,
-            /src/images/desktop/iceCreamDesktop@2x.png 2x
+            /src/images/desktop/iceCreamDesktop.png       1x,
+            /src/images/desktop/x2/iceCreamDesktop@2x.png 2x
           "
           media="(min-width: 1200px)"
           width="484"
         />
         <source
           srcset="
-            /src/images/tablet/iceCreamTablet.png    1x,
-            /src/images/tablet/iceCreamTablet@2x.png 2x
+            /src/images/tablet/iceCreamTablet.png       1x,
+            /src/images/tablet/x2/iceCreamTablet@x2.png 2x
           "
           media="(min-width: 768px)"
           width="270"
         />
         <source
           srcset="
-            /src/images/mobile/iceCreamMobile.png    1x,
-            /src/images/mobile/iceCreamMobile@2x.png 2x
+            /src/images/mobile/iceCreamMobile.png       1x,
+            /src/images/mobile/x2/iceCreamMobile@2x.png 2x
           "
           media="(min-width: 480px)"
           width="270"
         />
         <source
           srcset="
-            /src/images/mobile/iceCreamMobile.png    1x,
-            /src/images/mobile/iceCreamMobile@2x.png 2x
+            /src/images/mobile/iceCreamMobile.png       1x,
+            /src/images/mobile/x2/iceCreamMobile@2x.png 2x
           "
           media="(max-width: 479px)"
           width="247"
