--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-        <section class="section slider" >
-            <img class="slider__gallery" src="/src/images/customer-reviews/lodyMobile1x.jpg.jpg">
-            <div>
+        <section class="section">
+            <div class="gallery">
+                <img class="gallery__image" src="/src/images/customer-reviews/lodyMobile1x.jpg.jpg">
+            </div>
+            <div class="slider">
             <img class="slider__image" src="/src/images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
             <p class="slider__text">
                 I love visiting your cafe. You prepare the most delicious ice
