--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -2,7 +2,7 @@
 <!--Okno modalne + button About-->
 <div>
   <div>
-    <button type="button" data-modal-open>About</button>
+    <button type="button">About</button>
   </div>
 </div>
 
