--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,1 +1,15 @@
 <!DOCTYPE html>
+<section class="section">
+    <div class="gallery">
+        <img class="gallery__image" src="/src/images/reviews/lodyMobile2x.jpg">
+    </div>
+    <div class="slider">
+        <img class="slider__image" src="/src/images/reviews/Emily1x.jpg" alt="kobieta">
+        <p class="slider__text">
+            I love visiting your cafe. You prepare the most delicious ice
+            cream in Los Angeles! In addition, you have beautiful serving,
+            cozy atmosphere and polite staff.
+        </p>
+        <h2 class="slider__heading">Emily, Los Angeles</h2>
+    </div>
+</section>
