--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,3 +17,4 @@
 @import './components/modal';
 @import './components/forms';
 @import './components/footer';
+@import './components/customer-reviews';
