--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -80,57 +80,42 @@
     background-color: #d6936d;
   }
   &--color-green::after {
-    content: "";
+    content: '';
     position: absolute;
     top: -97px;
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background: linear-gradient(
-        0deg,
-        rgba(156, 190, 143, 0.7) 0%,
-        rgba(156, 190, 143, 0.7) 100%
-      ),
+    background: linear-gradient(0deg, rgba(156, 190, 143, 0.7) 0%, rgba(156, 190, 143, 0.7) 100%),
       #d9d9d9;
-    box-shadow: 0px 5.342193126678467px 20.033222198486328px 0px
-      rgba(10, 136, 23, 0.25);
+    box-shadow: 0px 5.342193126678467px 20.033222198486328px 0px rgba(10, 136, 23, 0.25);
     z-index: 1;
   }
 
   &--color-yellow::after {
-    content: "";
+    content: '';
     position: absolute;
     top: -97px;
     width: 200px;
     height: 200px;
     border-radius: 50%;
 
-    background: linear-gradient(
-        0deg,
-        rgba(248, 210, 78, 0.7) 0%,
-        rgba(248, 210, 78, 0.7) 100%
-      ),
+    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7) 0%, rgba(248, 210, 78, 0.7) 100%),
       #d9d9d9;
-    box-shadow: 0px 5.403973579406738px 20.26490020751953px 0px
-      rgba(153, 114, 23, 0.25);
+    box-shadow: 0px 5.403973579406738px 20.26490020751953px 0px rgba(153, 114, 23, 0.25);
     z-index: 1;
   }
   &--color-orange::after {
-    content: "";
+    content: '';
     position: absolute;
     top: -97px;
     width: 200px;
     height: 200px;
     border-radius: 50%;
 
-    background: linear-gradient(
-        0deg,
-        rgba(213, 117, 63, 0.7) 0%,
-        rgba(213, 117, 63, 0.7) 100%
-      ),
+    background: linear-gradient(0deg, rgba(213, 117, 63, 0.7) 0%, rgba(213, 117, 63, 0.7) 100%),
       #d9d9d9;
-    box-shadow: 0px 5.413332939147949px 20.299999237060547px 0px
-      rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5.413332939147949px 20.299999237060547px 0px rgba(0, 0, 0, 0.25);
     z-index: 1;
   }
 }
@@ -170,7 +155,7 @@
   }
   .products__list {
     &--color-green::after {
-      content: "";
+      content: '';
       position: absolute;
       top: -172px;
       width: 302px;
@@ -178,7 +163,7 @@
     }
 
     &--color-yellow::after {
-      content: "";
+      content: '';
       position: absolute;
       top: -172px;
       width: 302px;
@@ -186,11 +171,54 @@
     }
 
     &--color-orange::after {
-      content: "";
+      content: '';
       position: absolute;
       top: -172px;
       width: 302px;
       height: 302px;
+    }
+  }
+}
+
+.products {
+  position: relative;
+}
+
+.products::before {
+  content: '';
+  position: absolute;
+  background-image: url(/src/images/mobile/background_mobile.png);
+  background-size: auto;
+  background-position: 70% -10%;
+  background-repeat: repeat;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .products::before {
+    content: '';
+    position: absolute;
+    background-image: url(/src/images/tablet/background-tablet.png);
+    background-size: auto;
+    background-position: 33%;
+    background-repeat: no-repeat;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+  }
+
+  @media (min-width: 1200px) {
+    .products::before {
+      content: '';
+      position: absolute;
+      background-image: url(/src/images/desktop/background-desktop.png);
+      background-size: auto;
+      background-position: 33% 80%;
+      background-repeat: no-repeat;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
     }
   }
 }
