mobile-menu-active

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,6 +64,29 @@
     </nav>
   </div>
 </header>
+
+<!--Mobile-menu-->
+<div class="menu-container js-menu-container" id="mobile-menu">
+  <button type="button" class="menu-container__close-btn js-close-menu">
+    <svg width="13" height="13">
+          <use href="./images/icons.svg#icon-close-x">
+          </use>
+    </svg>
+  </button>
+  <div class="mobile-menu">
+    <ul class="mobile-menu_nav">
+      <li class="mobile-menu_nav-item"><a class="" href="">Home</a></li>
+      <li class="mobile-menu_nav-item"><a class="" href="">How it`s made?</a></li>
+      <li class="mobile-menu_nav-item"><a class="" href="">Our products</a></li>
+      <li class="mobile-menu_nav-item"><a class="" href="">Contact</a></li>
+    </ul>
+  </div>  
+</div>
+
+
+
+<!--Modal-->
+
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button class="modal_btn-svg" type="modal-button" data-modal-close>
