--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,4 @@
 @import './components/forms';
 @import './components/footer';
 @import './components/customer-reviews';
+@import './components/menu-container';
