--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './vars/mixins';
 
 @import './components/header';
+@import './components/hero';
 @import './components/contacts';
 @import './components/products';
 @import './components/about';
