--- a/src/sass/vars/_mixins.scss
+++ b/src/sass/vars/_mixins.scss
@@ -9,6 +9,16 @@
         @media screen and (min-width: 1200px)
         {@content;}
 }
+
+@mixin mobile 
+{
+        @media screen and (min-width: 320px)
+        {@content;}
+}
+
+
+
+
 @mixin doubledppx 
 {
         @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx)
