margin-minus contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -40,7 +40,7 @@
       </ul>
     </div>
     <div class="contact__container">
-      <div class="contact__orginal-heading-container">
+      <div class="contact__orginal-heading-container --contact__orginal-heading-container">
         <p class="contact__title">FOODTRUCK</p>
       </div>
       <p class="contact__simply-text">Los Angeles</p>
