--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -88,6 +88,7 @@
    &__main-list {
    	display: flex;
    	gap: 12px;
+    color: $button-yellow;
    }
   // &__main-link {
   // 	padding: 11px 26px;
