--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -88,7 +88,7 @@
    &__main-list {
    	display: flex;
    	gap: 12px;
-    color: $button-yellow;
+    color: #f8d24e;
    }
   // &__main-link {
   // 	padding: 11px 26px;
