--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -87,7 +87,25 @@
   // zastępcze
    &__main-list {
    	display: flex;
+    align-items: baseline;
    	gap: 12px;
+    margin-top: 32px;
+    
+        @include tablet {
+      margin-top: 1.5em;
+      margin-bottom: 0.75em;
+      }
+
+      @include desktop {
+      margin-top: 3.75em;
+      margin-bottom: 3.625em;
+      }
+
+
+   }
+
+
+   &__main-link {
     color: #f8d24e;
    }
   // &__main-link {
